--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
     <section class="vid">
         <video controls="controls" autoplay muted loop src="assets/1111279_Trunk_Putting_1280x720.mp4"></video>
         <div class="overlay-text">
-            <h1>Why our customers <span>like Moove</span></h1>
+            <h1>Why our customers <span>love Moove</span></h1>
             <p>I love to drive. Moove helped me to turn my passion into income. I am grateful to Moove</p>
             <p class="name">Aluta Anthony</p>
             <a href="#"> Join Us</a>
